<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/implementasi_metode_weighted_product"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untuk_menentukan_produk_jual"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studi_kasus_toko_fermala"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kec_petasia_timur"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kab_morowali_utara"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_kriteria"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/kriteria"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_perangkingan"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_alternatif"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/alternatif"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_perangkingan"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_perangkingan"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#FF9800"
        android:text="@string/perangkingan"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="144dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btn_kriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/__0qyqou6anqonvmhktcrvzq"
        tools:srcCompat="@drawable/__0qyqou6anqonvmhktcrvzq" />

</androidx.constraintlayout.widget.ConstraintLayout>