<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/implementasi_metode_weighted_product"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textColor="#FF9800"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.099"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/untuk_menentukan_produk_jual"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textColor="#FF9800"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/studi_kasus_toko_fermala"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#FF9800"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:layout_constraintVertical_bias="0.048"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/kec_petasia_timur"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#FF9800"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      tools:ignore="TextContrastCheck" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/kab_morowali_utara"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="#FF9800"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"
      tools:ignore="TextContrastCheck" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="256dp"
      android:layout_height="144dp"
      android:layout_marginTop="52dp"
      android:contentDescription="@string/todo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5"
      app:srcCompat="@drawable/__0qyqou6anqonvmhktcrvzq"
      tools:srcCompat="@drawable/__0qyqou6anqonvmhktcrvzq" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/edt_login_nama"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:startIconDrawable="@drawable/baseline_person_24">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Masukkan Email" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/edt_login_password"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_login_nama"
      app:errorEnabled="true"
      app:startIconDrawable="@drawable/baseline_lock_24">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Password" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      android:layout_marginTop="6dp"
      android:text="Daftar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>